<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="account_label_taobao">淘宝</string>
    <string name="action_settings">Settings</string>
    <string name="add_shopcart_success">已加入购物车\10请打开电视淘宝或手机淘宝完成下单</string>
    <string name="ali_auth_sms_code_success_hint">验证码已发送(%ss)\10</string>
    <string name="ali_auth_sms_veri_title">请输入 %s 收到的验证码</string>
    <string name="ali_auth_verification_reGetCode">重新获取验证码</string>
    <string name="alisdk_message_17_action" />
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="aliuser_account">账户</string>
    <string name="aliuser_auth_account_remove_cancel">取消</string>
    <string name="aliuser_auth_account_remove_delete">删除</string>
    <string name="aliuser_auth_account_remove_info">删除后，下次登录需要重新校验身份信息，确定删除？</string>
    <string name="aliuser_auth_account_remove_title">账户删除</string>
    <string name="aliuser_key_string">密码登录</string>
    <string name="aliuser_offline_login_fail">账户名密码错误或没有登录权限，你也可以尝试连接网络后重试</string>
    <string name="aliuser_password">密码</string>
    <string name="aliuser_scan_hint">请使用零售通扫码二维码登录</string>
    <string name="aliuser_scan_string">扫码登录</string>
    <string name="aliuser_sign_in_email_or_id">手机号/会员名/邮箱</string>
    <string name="aliuser_sign_in_input_password">请输入密码</string>
    <string name="aliuser_sign_in_please_enter_password">请输入密码</string>
    <string name="aliuser_sign_in_please_enter_username">请输入用户名</string>
    <string name="aliuser_sign_in_title">登录</string>
    <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliusersdk_scan_network_error">网络异常，请联网后重试</string>
    <string name="aliusersdk_session_error">亲，你的操作已超时，请重试</string>
    <string name="app_name">电视淘宝</string>
    <string name="auth_sdk_message_10003_action" />
    <string name="auth_sdk_message_10003_message">用户取消登录或登录失败</string>
    <string name="auth_sdk_message_10003_name">USER_CANCEL</string>
    <string name="auth_sdk_message_10003_type">I</string>
    <string name="auth_sdk_message_10004_action" />
    <string name="auth_sdk_message_10004_message">用户取消登录</string>
    <string name="auth_sdk_message_10004_name">TAOBAO_CANCEL</string>
    <string name="auth_sdk_message_10004_type">I</string>
    <string name="auth_sdk_message_10005_action" />
    <string name="auth_sdk_message_10005_message">唤起手淘登录失败</string>
    <string name="auth_sdk_message_10005_name">TAOBAO_ERROR</string>
    <string name="auth_sdk_message_10005_type">I</string>
    <string name="auth_sdk_message_10010_action" />
    <string name="auth_sdk_message_10010_message">系统异常</string>
    <string name="auth_sdk_message_10010_name">SYSTEM_ERROR</string>
    <string name="auth_sdk_message_10010_type">I</string>
    <string name="auth_sdk_message_10015_action" />
    <string name="auth_sdk_message_10015_message">退出登录</string>
    <string name="auth_sdk_message_10015_name">USER_LOGOUT</string>
    <string name="auth_sdk_message_10015_type">I</string>
    <string name="auth_sdk_message_10101_action" />
    <string name="auth_sdk_message_10101_message">H5登录失败</string>
    <string name="auth_sdk_message_10101_name">H5_ERROR</string>
    <string name="auth_sdk_message_10101_type">I</string>
    <string name="auth_sdk_message_1011_message">跳过绑定</string>
    <string name="auth_sdk_message_1011_name">SKIP_BIND</string>
    <string name="auth_sdk_message_15_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 MemberSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="auth_sdk_message_15_message">接口异常，错误消息为： {0}, 请使用 LogCat 查看更多细节</string>
    <string name="auth_sdk_message_15_name">SERVER_REQUEST_ERROR</string>
    <string name="auth_sdk_message_15_type">I</string>
    <string name="auth_sdk_message_qr_expired">二维码已过期</string>
    <string name="auth_sdk_message_qr_expired_sub">请刷新二维码重试</string>
    <string name="auth_sdk_message_qr_login_success">登录成功</string>
    <string name="auth_sdk_message_qr_refresh">刷新二维码</string>
    <string name="auth_sdk_message_qr_scaned">扫描成功!</string>
    <string name="auth_sdk_message_qr_scaned_sub">请在手机端确认</string>
    <string name="avsdk_defaulttime">00:00:00</string>
    <string name="avsdk_mobile_network_hint">您当前处于移动网络，请注意流量消耗～</string>
    <string name="avsdk_status_error_hang">亲，您的手机网络不太顺畅喔~</string>
    <string name="bs_before_up_default_memo">一起开启购物新体验</string>
    <string name="bs_up_app_name">UpdateApp</string>
    <string name="bs_up_confirm_exit">确定</string>
    <string name="bs_up_dilog_title">有新版本可用</string>
    <string name="bs_up_fail_text">版本升级失败！</string>
    <string name="bs_up_leave">下次再说</string>
    <string name="bs_up_line">渐变线</string>
    <string name="bs_up_network_error">网络连接异常！</string>
    <string name="bs_up_prompt_content">亲，版本过低，升级后才能继续使用哦</string>
    <string name="bs_up_remind">有新版本可以更新啦！</string>
    <string name="bs_up_retry">请重试</string>
    <string name="bs_up_update">立即更新</string>
    <string name="bs_update_progress">新版本下载中（%d%%）</string>
    <string name="buildId">localBuild</string>
    <string name="channel">shafa</string>
    <string name="channelId">2016060315</string>
    <string name="com_taobao_login_param_invlaid">请求参数不合法</string>
    <string name="com_taobao_tae_sdk_alert_message">您离开太久了，请重新操作</string>
    <string name="com_taobao_tae_sdk_authorize_title">登录授权</string>
    <string name="com_taobao_tae_sdk_back_message">取消</string>
    <string name="com_taobao_tae_sdk_bind_title">登录并绑定</string>
    <string name="com_taobao_tae_sdk_close_message">关闭</string>
    <string name="com_taobao_tae_sdk_confirm">确定</string>
    <string name="com_taobao_tae_sdk_confirm_cancel">取消</string>
    <string name="com_taobao_tae_sdk_loading_progress_message">加载中</string>
    <string name="com_taobao_tae_sdk_logout_fail_message">登出失败</string>
    <string name="com_taobao_tae_sdk_network_not_available_message">网络无法连接</string>
    <string name="com_taobao_tae_sdk_ssl_error_info">证书错误. 是否继续访问?</string>
    <string name="com_taobao_tae_sdk_ssl_error_title">SSL证书错误</string>
    <string name="com_taobao_tae_sdk_system_exception">系统异常</string>
    <string name="contentDescription" />
    <string name="coupon_diyongquan">抵用券</string>
    <string name="coupon_red_packet">红包</string>
    <string name="coupon_shop_red_packet">店铺红包</string>
    <string name="coupon_subtitle">淘宝红包请在首页下方点击【红包明细】查看</string>
    <string name="daren">达人</string>
    <string name="daren_home_fans">%1$s粉丝</string>
    <string name="daren_home_follow_success">关注成功\10你可去我的淘宝查看</string>
    <string name="daren_home_identify">认证：%1$s</string>
    <string name="default_account_name">我的主账号</string>
    <string name="delete_search_history">您要删除全部历史记录吗？</string>
    <string name="goods_parameter">商品参数</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_box_tips">输入首字母或全拼搜索</string>
    <string name="jhs_brand_list_null">亲，目前还没有商品，我们会尽快更新~</string>
    <string name="jhs_confirm">确定</string>
    <string name="jhs_confirm_is_over">团购已结束,不能购买！</string>
    <string name="jhs_confirm_no_stock">商品卖完了,不能购买！</string>
    <string name="jhs_confirm_not_start">团购未开始,不能购买！</string>
    <string name="jhs_data_error">数据错误</string>
    <string name="jhs_detail_sold_desc">已售</string>
    <string name="jhs_discount_unit">折</string>
    <string name="jhs_dollar_sign">¥</string>
    <string name="jhs_invalid_parameter">无效的参数值！</string>
    <string name="jhs_jump_error">URL错误</string>
    <string name="jhs_network_error_goto_set">网络连接错误，设置网络连接</string>
    <string name="jhs_no_address">您还没有设置收货地址，请先到淘宝网设置收货地址！</string>
    <string name="jhs_no_data">亲，已经没有数据啦</string>
    <string name="jhs_no_more_goods">没有更多宝贝啦</string>
    <string name="jhs_num_1">1</string>
    <string name="jhs_open_setting_activity_error">打开设置页面失败，请手动进入设置页面</string>
    <string name="jhs_original_price">原价¥</string>
    <string name="jhs_page_fuhao">/</string>
    <string name="jhs_pinpai_num">个品牌</string>
    <string name="jhs_quanbu">全部</string>
    <string name="jhs_server_error">对不起，服务暂时无响应，请稍后重试！</string>
    <string name="jhs_setting">设置</string>
    <string name="jhs_sold_unit">人已买</string>
    <string name="jhs_start_sold">开抢</string>
    <string name="loading_speed">下载速度：</string>
    <string name="loginverify_sms_code_success_hint">确认（ %ss ）</string>
    <string name="loginverify_sms_code_success_hint_h">确认\10(%ss)</string>
    <string name="loginverify_sms_veri_title">验证码已发送至手机 %s</string>
    <string name="loginverify_title">输入验证码</string>
    <string name="loginverify_verification_reGetCode">重新获取验证码</string>
    <string name="loginverify_verification_reGetCode_h">重新\10获取</string>
    <string name="ytbv_confirm">确定</string>
    <string name="ytm_loading_uuid_fail">应用初始化失败, 请重试</string>
    <string name="ytm_loading_uuid_wait">应用正在初始化, 请稍候</string>
    <string name="ytsdk_my_taobao">我的淘宝</string>
    <string name="ytsdk_mytaobao_account">账号</string>
    <string name="ytsdk_mytaobao_add_fav">收藏</string>
    <string name="ytsdk_mytaobao_address_title">收货地址</string>
    <string name="ytsdk_mytaobao_cart">购物车</string>
    <string name="ytsdk_mytaobao_coupon_title">卡券包</string>
    <string name="ytsdk_mytaobao_foot_mark_title">足迹</string>
    <string name="ytsdk_mytaobao_order">订单</string>
    <string name="ytsdk_mytaobao_point">电视淘宝积分</string>
    <string name="yunos_dmode_tips1">当前设备不支持您安装的【电视淘宝】</string>
    <string name="yunos_dmode_tips2">请通过【当贝】或【沙发管家】搜索：DSTB</string>
    <string name="yunos_dmode_tips3">下载安装</string>
</resources>