<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:id="@+id/bs_up_update_layout" android:paddingBottom="@dimen/bs_up_update_layout_padding_bottom" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/bs_up_update_text_font" android:textColor="@color/bs_up_update_white" android:layout_gravity="center" android:id="@+id/bs_up_update_text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bs_up_update_text_margin_left" android:layout_marginTop="@dimen/bs_up_update_text_margin_top" android:layout_marginRight="@dimen/bs_up_update_text_margin_right" android:text="@string/bs_up_remind"/>
    <TextView android:textSize="@dimen/bs_up_update_info_font" android:textColor="@color/bs_up_update_info_color" android:gravity="center" android:id="@+id/bs_up_update_info" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bs_up_update_info_margin_left" android:layout_marginTop="@dimen/bs_up_update_info_margin_top" android:layout_marginRight="@dimen/bs_up_update_info_margin_right" android:layout_marginBottom="@dimen/bs_up_update_info_margin_bottom" android:maxLines="3" android:lineSpacingExtra="@dimen/bs_up_update_info_divider"/>
    <TextView android:textSize="@dimen/bs_up_fail_text_size" android:textColor="@color/bs_up_update_white" android:id="@+id/bs_up_fail_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bs_up_fail_text_margin_top" android:layout_marginBottom="@dimen/bs_up_fail_text_margin_bottom" android:text="@string/bs_up_fail_text"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/bs_up_button_layout" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bs_up_button_margin_bottom">
        <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_install" app:text="@string/bs_up_update" style="@style/bs_up_myButton"/>
        <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_leave" android:layout_marginTop="@dimen/bs_up_button_divider" app:text="@string/bs_up_leave" style="@style/bs_up_myButton"/>
    </LinearLayout>
    <ProgressBar android:id="@+id/bs_up_pb" android:visibility="gone" android:layout_width="@dimen/bs_up_pb_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bs_up_pb_margin_top" android:layout_marginBottom="@dimen/bs_up_pb_margin_bottom" style="@style/bs_up_myProgressBar"/>
    <TextView android:textSize="@dimen/bs_up_error_text_size" android:textColor="@color/bs_up_error_text_color" android:id="@+id/bs_up_error_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bs_up_error_text_margin_bottom" android:text="@string/bs_up_network_error"/>
    <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_retry" android:visibility="gone" app:text="@string/bs_up_retry" style="@style/bs_up_myButton"/>
    <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_exit" android:visibility="gone" app:text="@string/bs_up_confirm_exit" style="@style/bs_up_myButton"/>
</LinearLayout>
