<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:layout_gravity="center" android:background="@drawable/bs_up_focus" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/bs_up_update_layout" android:background="@color/bs_up_no_blur_update_layout_bg" android:layout_width="@dimen/bs_up_update_layout_width" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/bs_up_update_text_font" android:textColor="@color/bs_up_update_black" android:layout_gravity="center" android:id="@+id/bs_up_update_text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bs_up_update_text_margin_left" android:layout_marginTop="@dimen/bs_up_update_text_margin_top" android:layout_marginRight="@dimen/bs_up_update_text_margin_right" android:text="@string/bs_up_remind"/>
        <TextView android:textSize="@dimen/bs_up_update_info_font" android:textColor="@color/bs_up_update_black_70" android:gravity="center" android:id="@+id/bs_up_update_info" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bs_up_update_info_margin_left" android:layout_marginTop="@dimen/bs_up_update_info_margin_top" android:layout_marginRight="@dimen/bs_up_update_info_margin_right" android:layout_marginBottom="@dimen/bs_up_update_no_blur_info_margin_bottom" android:maxLines="3" android:lineSpacingExtra="@dimen/bs_up_update_info_divider"/>
        <TextView android:textSize="@dimen/bs_up_fail_text_size" android:textColor="@color/bs_up_update_black" android:id="@+id/bs_up_fail_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bs_up_no_blur_fail_text_margin_top" android:layout_marginBottom="@dimen/bs_up_no_blur_fail_text_margin_bottom" android:text="@string/bs_up_fail_text"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/bs_up_button_layout" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_install" app:text="@string/bs_up_update" style="@style/bs_up_no_blur_myButton"/>
            <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_leave" app:text="@string/bs_up_leave" style="@style/bs_up_no_blur_myButton"/>
        </LinearLayout>
        <ProgressBar android:id="@+id/bs_up_pb" android:visibility="gone" android:layout_width="@dimen/bs_up_pb_width" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bs_up_no_blur_pb_margin_bottom" style="@style/bs_up_myProgressBar"/>
        <TextView android:textSize="@dimen/bs_up_no_blur_error_text_size" android:textColor="@color/bs_up_update_black_70" android:id="@+id/bs_up_error_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bs_up_no_blur_error_text_margin_top" android:layout_marginBottom="@dimen/bs_up_no_blur_error_text_margin_bottom" android:text="@string/bs_up_network_error"/>
        <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_retry" android:visibility="gone" app:text="@string/bs_up_retry" style="@style/bs_up_no_blur_myButton"/>
        <com.yunos.taobaotv.update.widget.UpdateButton android:id="@+id/bs_up_exit" android:visibility="gone" app:text="@string/bs_up_confirm_exit" style="@style/bs_up_no_blur_myButton"/>
    </LinearLayout>
</FrameLayout>
