<?xml version="1.0" encoding="utf-8"?>
<com.yunos.tvtaobao.tvsdk.widget.focus.FocusPositionManager xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mytaobao_layout" android:background="@color/ytm_my_taobao_bg" android:focusable="true" android:layout_width="@dimen/dp_6000" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/sp_44" android:textColor="@color/ytm_white" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_564" android:layout_marginTop="@dimen/dp_46" android:text="@string/ytsdk_my_taobao"/>
    <com.yunos.tvtaobao.tvsdk.widget.focus.FocusScrollerLinearLayout android:id="@+id/mytaobao_scroller" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_162">
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/point" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_centerHorizontal="true" app:mtTitle="@string/ytsdk_mytaobao_point" app:mtImage="@drawable/ytsdk_mytaobao_point"/>
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/cart" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_28" android:layout_centerHorizontal="true" app:mtTitle="@string/ytsdk_mytaobao_cart" app:mtImage="@drawable/ytsdk_ui2_cart_mytaobao"/>
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/collect" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_centerHorizontal="true" app:mtTitle="@string/ytsdk_mytaobao_add_fav" app:mtImage="@drawable/ytsdk_ui2_mytaobao_collection"/>
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/order" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" app:mtTitle="@string/ytsdk_mytaobao_order" app:mtImage="@drawable/ytsdk_ui2_mytaobao_order"/>
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/foot_mark" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" app:mtTitle="@string/ytsdk_mytaobao_foot_mark_title" app:mtImage="@drawable/foot_mark_icon"/>
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/address" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" app:mtTitle="@string/ytsdk_mytaobao_address_title" app:mtImage="@drawable/ytsdk_ui2_address_mytaobao"/>
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/coupon" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_marginRight="@dimen/dp_28" app:mtTitle="@string/ytsdk_mytaobao_coupon_title" app:mtImage="@drawable/ytsdk_ui2_mytaobao_coupon"/>
        <com.yunos.tvtaobao.mytaobao.view.ItemLayoutForMyTaoBao android:id="@+id/account" android:paddingLeft="@dimen/dp_12" android:paddingTop="@dimen/dp_18" android:paddingRight="@dimen/dp_12" android:paddingBottom="@dimen/dp_18" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_marginRight="@dimen/dp_28" app:mtTitle="@string/ytsdk_mytaobao_account" app:mtImage="@drawable/mytaobao_ytsdk_touming"/>
    </com.yunos.tvtaobao.tvsdk.widget.focus.FocusScrollerLinearLayout>
    <RelativeLayout android:layout_gravity="bottom" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_580" android:layout_marginBottom="@dimen/dp_23" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/color_white_60" android:id="@+id/loading_app_version" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/color_white_60" android:id="@+id/loading_app_buildno" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/loading_app_version"/>
    </RelativeLayout>
</com.yunos.tvtaobao.tvsdk.widget.focus.FocusPositionManager>
