<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/loading_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <ProgressBar android:layout_gravity="center_horizontal" android:id="@+id/loading_progressbar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_200" android:indeterminateDrawable="@drawable/ytm_progress_bar_drawable" style="android:style/Widget.ProgressBar.Large"/>
    <TextView android:textSize="@dimen/dp_40" android:textColor="@color/ytm_white" android:layout_gravity="center_horizontal" android:id="@+id/loading_wait_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_380" android:text="@string/ytm_loading_uuid_wait"/>
    <TextView android:textSize="@dimen/dp_40" android:textColor="@color/ytm_white" android:layout_gravity="center_horizontal" android:id="@+id/loading_fail_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_200" android:text="@string/ytm_loading_uuid_fail"/>
    <Button android:textSize="@dimen/dp_36" android:textColor="@color/ytm_white" android:layout_gravity="center_horizontal" android:id="@+id/loading_fail_button" android:background="@drawable/ytm_loading_fail_button" android:paddingLeft="@dimen/dp_100" android:paddingTop="@dimen/dp_10" android:paddingRight="@dimen/dp_100" android:paddingBottom="@dimen/dp_10" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_300" android:text="@string/ytbv_confirm"/>
    <TextView android:textSize="@dimen/sp_16" android:textColor="@android:color/white" android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/loading_app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_25"/>
</FrameLayout>
